--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Base application theme. -->
     <style name="Base.Theme.SystemREQ" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <!-- Ana renkler -->
+        <item name="colorPrimary">@color/ana</item>
+        <item name="colorOnPrimary">@android:color/white</item>
+
+        <!-- Vurgu rengi -->
+        <item name="colorSecondary">@color/vurgular</item>
+        <item name="colorOnSecondary">@color/arkaplan</item>
+
+        <!-- arkaplan -->
+        <item name="android:statusBarColor">@color/arkaplan</item>
+
     </style>
 
     <style name="Theme.SystemREQ" parent="Base.Theme.SystemREQ" />
